app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@x_export_to_c3.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/x_export_to_c3.json
---
[
    "Export Tx": "X to C Chain",
    "Amount": "0.000012345 LUX to ",
    "Address": "fuji12yp9cc0melq83a5nxnurf0nd6fk4t224unmnwx",
    "Fee(LUX)": "0.123432099",
]
